Unify api criteria and create postman
