# practica2/src/main/java/com/cloudapps/practica2/controller/UserController.java
@@ -7,23 +7,25 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.cloudapps.practica2.model.User;
 import com.cloudapps.practica2.service.UserService;
 
 @RestController
+@RequestMapping("/users")
 public class UserController {
     
     @Autowired
 	private UserService userService;
 
-	@GetMapping("/users")
+	@GetMapping("/")
 	public Collection<User> getUsers() {
 		return userService.findAll();
 	}
 
-	@GetMapping("/user/{id}")
+	@GetMapping("/{id}")
 	public ResponseEntity<User> getUser(@PathVariable long id) {
 		User user = userService.findById(id);
 
@@ -34,7 +36,7 @@ public class UserController {
 		}
 	}
 
-	// @PostMapping("/user")
+	// @PostMapping("/")
 	// public ResponseEntity<Book> createBook(@RequestBody Book book) {
 
 	// 	bookService.save(book);
@@ -42,15 +44,15 @@ public class UserController {
   	// 	return ResponseEntity.created();
 	// }
 
-	@DeleteMapping("/user/{id}")
+	@DeleteMapping("/{id}")
 	public ResponseEntity<User> deleteUser(@PathVariable long id) {
 
 		User user = userService.findById(id);
 		if (user != null && user.getReviews() == null) {
-		userService.deleteById(id);
-		return ResponseEntity.ok(user);
+			userService.deleteById(id);
+			return ResponseEntity.ok(user);
 		} else {
-		return ResponseEntity.notFound().build();
+			return ResponseEntity.notFound().build();
 		}
 	}
 
